--- a/sample.css
+++ b/sample.css
@@ -1,28 +1,13 @@
-html, body {
-    font-family: Helvetica, sans-serif;
-  }
-  
-  .wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    zoom: 1.4;
-  }
-  
-  input {
-    position: absolute;
-    will-change: transform;
-  }
-  
-  input.grow {
-    animation: grow 0.8s cubic-bezier(0.175, 0.885, 0.320, 1.275);
-  }
-  
-  @keyframes grow {
-    0%     { transform: scale(1);       }
-    30%    { transform: scale(2.5);     }
-    100%   { transform: scale(1);       }
-  }
+header.dashboard-header {
+  background-color: #cee7ff !important;
+  border-bottom-color: #00519e !important;
+}
+
+.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
+  color: #000 !important;
+}
+
+header.dashboard-header nav #header {
+  background-size: 50px 40px !important;
+  background-image: url("https://cdn.jsdelivr.net/gh/auth0-extensions/auth0-delegated-administration-extension/docs/theme/fabrikam.svg") !important;
+}
